--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.20",
-    "classnames": "^2.2.6",
-    "graphql": "^14.0.2",
-    "moment": "^2.22.2",
-    "react": "^16.6.1",
-    "react-apollo": "^2.2.4",
-    "react-dom": "^16.6.1",
-    "react-moment": "^0.8.3",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "@apollo/client": "^3.6.9",
+    "classnames": "^2.3.1",
+    "graphql": "^16.5.0",
+    "moment": "^2.29.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
